# TalenEnAutomaten

./: Automaat_parser.cc  Automaat_parser.h  CMakeLists.txt  State.cpp  State.h  TOTests.cpp  TOmain.cpp  TestsStateElimination.cpp
TestsStateElimination/: Test1.json  Test111.dot  Test2.dot  Test2.json  Test3.json
verdediging/: input1.dot
